# EventRacerLibrary

./: CMakeLists.txt  README.md  VarsInfo.cpp  config.cpp  config.h
src/: CMakeLists.txt
